<resources>
    <string name="app_name">IndieBooks</string>
    <string name="subtitulo_login">Bienvenido</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_google">Continuar con Google</string>
    <string name="pregunta_cuenta">¿No tienes cuenta? Registrate</string>
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="ubicacion">Ubicación</string>
    <string name="cuenta">Mi Cuenta</string>
    <string name="poner_en_carrito">Añadir al carrito</string>
    <string name="precio1">$64.000</string>
    <string name="title1">Reinas Guerreras</string>
    <string name="title6">Secuestro de piel</string>
    <string name="price2">$58,000</string>
    <string name="title2">Fraternalismo</string>
    <string name="price3">$72,000</string>
    <string name="title4">Romulhu</string>
    <string name="title5">Preludio a una rosa</string>
    <string name="price4">$75,000</string>
    <string name="title3">Por si me voy y te dejo</string>
    <string name="comprar">Finalizar Compra</string>
    <string name="subtitle_car">Carrito de compras</string>
    <string name="subtitle_car2">Conoce nuestra tienda física</string>
    <string name="subtitle_car4">Visitanos en:</string>
    <string name="perfil">Tu perfil</string>
    <string name="update">Guardar Cambios</string>
    <string name="sub_perfil">Tu perfil</string>
    <string name="Tomar_foto">Tomar foto de usuario</string>
    <string name="registrarme">Registrarme</string>
    <string name="ver_un_usuario">Ver un usuario</string>
    <string name="ver_todos_los_usuarios">Ver todos los usuarios</string>
    <string name="crear_un_usuario">Crear un usuario</string>
    <string name="usuarios_admin">Usuarios</string>
    <string name="productos_admin">Productos</string>
    <string name="compras_admin">Comprás</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="actualizar_usuario">Actualizar</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="ingrese_el_id_del_usuario">Ingrese el ID</string>
    <string name="btn_buscar_usuario">Buscar usuario</string>
    <string name="resultado_temporal"></string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="ubicacion_imagen_del_producto">Ubicacion imagen del producto</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="ver_un_producto">Ver un producto</string>
    <string name="ver_todos_los_productos">Ver todos los productos</string>
    <string name="ingresar_nuevo_producto">Ingresar nuevo producto</string>
    <string name="actualizar_producto">Actualizar Producto</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>
    <string name="titulo_del_producto">Titulo del producto</string>
    <string name="costo">Costo</string>
    <string name="buscar_producto">Buscar Producto</string>
    <string name="despachado">Despachado</string>
</resources>