<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:background="@color/orange"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logoImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_foot1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_foot2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/carrito" />

        <ImageView
            android:id="@+id/iv_map"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/map" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/user_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_foot2"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inicio"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carrito"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ubicacion"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cuenta"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sub_perfil"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/iv_Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/ll_entrada1"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_entrada2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_name"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/user_blue" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textColorHint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_entrada2"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_entrada3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_first_name"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/user_blue" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/Apellido"
            android:inputType="text"
            android:textColorHint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_entrada3"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_entrada4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColorHint="@color/blue"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_entrada4"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/ll_entrada5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_adress"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/mail" />

        <EditText
            android:id="@+id/et_adress"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_entrada5"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColorHint="@color/blue" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ll_foot1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_Photo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/foto"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="162dp"
        app:layout_constraintBottom_toTopOf="@id/tv_tomarfoto"/>

    <TextView
        android:id="@+id/tv_tomarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tomar_foto"
        app:layout_constraintBottom_toTopOf="@id/ll_entrada1"
        tools:layout_editor_absoluteX="136dp" />

</androidx.constraintlayout.widget.ConstraintLayout>