<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="4dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/white"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_book_list"
            android:layout_width="180dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/libro_uno" />

        <TextView
            android:id="@+id/tv_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_price_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_actualizar_producto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/actualizar_usuario"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btn_eliminar_producto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Eliminar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

</androidx.cardview.widget.CardView>